[package]
name = "addressbook"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ldap3 = "0.11"
thiserror = "2.0"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
migration = { path = "migration" }
entity = { path = "entity" }
chrono = "0.4"

[workspace]
members = [".", "migration", "entity", "frontend"]