[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version = "0.12", features = ["yew_integration"] }
yewdux = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-console = "0.2"
gloo-net = "0.2"
dotenvy_macro = "0.15"
thiserror = "1.0"
yew-router = "0.17"
chrono = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement"
]
